Fix code block wrapping breaking change #1026
Quick fix of the following breaking change:
    * https://github.com/getzola/zola/pull/1026

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -123,7 +123,7 @@ figure {
   }
 }
 
-code {
+p code {
   font-family: Hack, DejaVu Sans Mono, Monaco, Consolas, Ubuntu Mono, monospace;
   font-feature-settings: normal;
   background: var(--accent-alpha-20);
